Formated Inserted Countries